store detected mime type (#2858)
* store detected mime type